--- a/paginaInicial.html
+++ b/paginaInicial.html
@@ -12,6 +12,7 @@
 
   <body><!-- parte visível ao usuário -->
     <h1>Bem-vindo(a) à página do grupo G3C</h1>
+    <h2>Teste 1</h3>
 
   </body><!-- fim do body -->
 
