Teste na linha 15
Estamos testando o funcionamento de dois comandos na mesma linha

--- a/paginaInicial.html
+++ b/paginaInicial.html
@@ -12,7 +12,7 @@
 
   <body><!-- parte visível ao usuário -->
     <h1>Bem-vindo(a) à página do grupo G3C</h1>
-
+    <h3>Teste</h3>
   </body><!-- fim do body -->
 
 </html>
