--- a/paginaInicial.html
+++ b/paginaInicial.html
@@ -13,6 +13,7 @@
   <body><!-- parte visível ao usuário -->
     <h1>Bem-vindo(a) à página do grupo G3C</h1>
     <h3>Teste</h3>
+    <h4>Teste2</h4>
   </body><!-- fim do body -->
 
 </html>
