--- a/paginaInicial.html
+++ b/paginaInicial.html
@@ -13,6 +13,9 @@
   <body><!-- parte visível ao usuário -->
     <h1>Bem-vindo(a) à página do grupo G3C</h1>
     <h2>Teste</h2>
+    <h2>
+  <button type="button" onclick="alert('Teste Medeiros')">Clique aqui</button>
+  </h2>
   </body><!-- fim do body -->
 
 </html>
