--- a/paginaInicial.html
+++ b/paginaInicial.html
@@ -12,12 +12,8 @@
 
   <body><!-- parte visível ao usuário -->
     <h1>Bem-vindo(a) à página do grupo G3C</h1>
-<<<<<<< HEAD
-    <h3>Teste</h3>
-    <h4>Teste2</h4>
-=======
     <h2>Teste</h2>
->>>>>>> 5ce0172f9a23e428b6c481bf503fd47315841a4f
+    <h2><button type="button" onclick="alert('Carai 3.0')">Carai 2.0</h2>
   </body><!-- fim do body -->
 
 </html>
