--- a/paginaInicial.html
+++ b/paginaInicial.html
@@ -15,7 +15,7 @@
     <h2>Teste</h2>
 
     <h2>
-  <button type="button" onclick="alert('Teste Medeiros')">Clique aqui</button>
+  <button type="button" onclick="alert('Teste Medeiros')">Clique . aqui</button>
   </h2>
   <h3>Teste</h3>
   <h4>Teste2</h4>
