Imagem xbox live 1

--- a/OPORA.html
+++ b/OPORA.html
@@ -11,5 +11,5 @@ A empresa está sempre em constante negociação com os fornecedor a fim de repa
 
 “Obrigado por confiar e comprar conosco”.</h3><!-- texto de explicação-->
 <button type="button" onclick="window.location.href='http://www.morebuy.com.br/'">Site oficial</button>
-
+<br><img src="3Meses.jpg" alt="3 Meses" height="300" width="500">
 </html>
