--- a/OPORA.html
+++ b/OPORA.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="utf-8">
 <title>Morebuy</title><!-- Nome da Empresa-->
-<img src="C:\Users\genet\Downloads\logo_v13.png" alt="Logo" height="200" width="300"><!--logotipo da empresa-->
-<h1>Quem somos</h1>
-<h3>A MOREBUY é uma empresa especializada em Jogos Eletrônicos e seus periféricos sendo criada em 2010 com intuito de oferecer os melhores produtos do mercado e praticando preços competitivos diante o mercado interno. A empresa teve o crescimento moderado com um aumento no número de vendas a partir de 2012, em função do aquecimento do mercado de jogos eletrônicos. As projeções indicam uma demanda crescente pelo tipo de produto que a empresa comercializa. A MOREBUY mantém uma margem competitiva através da entrega imediata de produtos, de excelente relação com os clientes e de sua capacidade de se adequar às suas necessidades.
-
+<link rel="stylesheet" type="text/css" href="estilobg.css"/>
+<img src="logo_v13.png" alt="Logo" height="200" width="300"><!--logotipo da empresa-->
+<h1>Quem somos?</h1>
+<h3>A MOREBUY é uma empresa em Jogos Eletrônicos e seus periféricos sendo criada em 2010 com intuito de oferecer os melhores produtos do mercado e praticando preços competitivos diante o mercado interno. A empresa teve o crescimento moderado com um aumento no número de vendas a partir de 2012, em função do aquecimento do mercado de jogos eletrônicos. As projeções indicam uma demanda crescente pelo tipo de produto que a empresa comercializa. A MOREBUY mantém uma margem competitiva através da entrega imediata de produtos, de excelente relação com os clientes e de sua capacidade de se adequar às suas necessidades.
 A empresa está sempre em constante negociação com os fornecedor a fim de repassar os descontos obtidos para seus clientes.
 
 “Obrigado por confiar e comprar conosco”.</h3><!-- texto de explicação-->
-<button type="button" onclick="window.location.href='http://www.morebuy.com.br/'">Site oficial</button>
+<button type="button" onclick="window.location.href='http://www.morebuy.com.br/'">Site oficial</button><!--redirecionamento para o site-->
 <br><img src="3Meses.jpg" alt="3 Meses" height="300" width="500">
-</html>
+<p><small>Copyright 1990 by Boros</small></p>
